--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "sunweibin <sunweibin1988@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "release": "release-it"
   },
   "husky": {
     "hooks": {
@@ -24,7 +25,8 @@
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "husky": "^3.0.4",
-    "lint-staged": "^9.2.1"
+    "lint-staged": "^9.2.1",
+    "release-it": "^12.3.5"
   },
   "conifg": {
     "commitizen": {
