--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dobby",
-  "version": "1.0.0",
+  "name": "@swb/dobby",
+  "version": "0.0.1",
   "description": "前端自动化开发-发布-构建CLI工具",
   "main": "index.js",
   "repository": "git@github.com:sunweibin/Dobby.git",
