--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "commitizen": "^4.0.3",
+    "conventional-changelog-cli": "^2.0.23",
     "cz-conventional-changelog": "^3.0.2",
     "husky": "^3.0.4",
     "lint-staged": "^9.2.1",
